Implementation of business logic, to register a user, make validation with jwt for user authentication.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=ReservationSystems
 
+security.jwt.secret-key=1DaqgqwAM55oOVcI/T9Sbkssg0J+IK2bZhYmLc6VH9o=
+# 1h in millisecond
+security.jwt.expiration-time=3600000
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingsystems
 spring.datasource.username=root
