--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=ReservationSystems
 
-security.jwt.secret-key=1DaqgqwAM55oOVcI/T9Sbkssg0J+IK2bZhYmLc6VH9o=
+security.jwt.secret-key=${TOKEN}
 # 1h in millisecond
 security.jwt.expiration-time=3600000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bookingsystems
+spring.datasource.url=${CONECCTION_BASE}
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=${PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
